--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -155,7 +155,8 @@ body {
 	font-family: 'Open Sans', sans-serif;
 	font-size: 14px;
 	font-weight: 400;
-	color: #a6a6a6;
+	/*color: #a6a6a6;*/
+	color: #373636;
 	line-height: 1.5;
 	margin: 0;
 }
@@ -274,7 +275,8 @@ h6,
 
 p {
 	font-family: 'Open Sans', sans-serif;
-	color: #a6a6a6;
+	/*color: #a6a6a6;*/
+	color: #373636;
 	font-size: 13px;
 	font-weight: 400;
 	line-height: 22px;
@@ -5177,7 +5179,8 @@ td.cart-product-quantity {
 	-moz-border-radius: 1px;
 	-webkit-border-radius: 1px;
 	border-radius: 1px;
-	color: #a6a6a6;
+	/*color: #a6a6a6;*/
+	color: #373636;
 	font-size: 13px;
 	font-weight: 400;
 	line-height: 22px;
